--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 .vscode
 
 # dependencies
-/node_modules
+*/node_modules
 /.pnp
 .pnp.*
 .yarn/*
@@ -15,8 +15,8 @@
 /coverage
 
 # next.js
-/.next/
-/out/
+*/.next/
+*/out/
 
 # production
 /build
