Fixed the vercel build file

--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,6 @@
 {
-    "projects": [
-      {
-        "src": "frontend/",
-        "use": "@vercel/next"
-      }
-    ]
+    "buildCommand": "npm run build",
+    "outputDirectory": ".next",
+    "framework": "nextjs"
   }
   
