--- a/.github/workflows/azure-webapps-dotnet-core.yml
+++ b/.github/workflows/azure-webapps-dotnet-core.yml
@@ -34,6 +34,7 @@ jobs:
             ${{ runner.os }}-nuget-
 
       - name: Build with dotnet
+        working-directory: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
         run: dotnet build --configuration Release
 
       - name: dotnet publish
