--- a/.github/workflows/azure-webapps-dotnet-core.yml
+++ b/.github/workflows/azure-webapps-dotnet-core.yml
@@ -38,6 +38,7 @@ jobs:
         run: dotnet build --configuration Release
 
       - name: dotnet publish
+        working-directory: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
         run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
       - name: Upload artifact for deployment job
