--- a/.github/workflows/azure-webapps-dotnet-core.yml
+++ b/.github/workflows/azure-webapps-dotnet-core.yml
@@ -1,7 +1,7 @@
 name: Build and deploy ASP.Net Core app to an Azure Web App
 
 env:
-  AZURE_WEBAPP_NAME: rg-tiny-tales-preview
+  AZURE_WEBAPP_NAME: app-tiny-tales-preview
   AZURE_WEBAPP_PACKAGE_PATH: 'backend'
   DOTNET_VERSION: '9'
 
