--- a/.github/workflows/azure-webapps-dotnet-core.yml
+++ b/.github/workflows/azure-webapps-dotnet-core.yml
@@ -61,6 +61,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: .net-app
+          path: deploy_output
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
@@ -68,4 +69,4 @@ jobs:
         with:
           app-name: ${{ env.AZURE_WEBAPP_NAME }}
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-          package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+          package: deploy_output
